@startuml
skinparam rectangle {
    BackgroundColor<<Utility>> LightYellow
    BorderColor<<Utility>> Orange
}

' --- Основные модели ---
class "main.models.Category" {
  - name: str
  - description: str
}

class "main.models.Product" {
  - name: str
  - description: str
  - price: Decimal
  - photo: str
  - is_exists: bool
  - manufacturer: Manufacturer
  - category: Category
}

class "main.models.Manufacturer" {
  - name: str
  - country: str
  - website: str
}

class "main.models.Customer" {
  - first_name: str
  - last_name: str
  - email: str
  - phone: str
  - address: str
}

class "main.models.Order" {
  - buyer_firstname: str
  - buyer_surname: str
  - comment: str
  - delivery_address: str
  - total_price: Decimal
  - user: Customer
}

class "main.models.Review" {
  - product: Product
  - customer: Customer
  - rating: int
  - comment: str
  - created_at: DateTime
}

' --- Утилиты (не являются моделями БД) ---
class "main.models.CartItem" <<Utility>> {
  - def save(self)
  - def add(self, product, count=1, update_count=False)
  - def remove(self, product)
  - def get_total_price(self)
  - def clear(self)
}

class "main.models.OrderItem" <<Utility>> {
  - def open_order(request)
}

' --- Связи между моделями (ассоциации) ---
main.models.Product "1" --> "1" main.models.Manufacturer : manufacturer
main.models.Product "1" --> "1" main.models.Category : category

main.models.Order "1" --> "1" main.models.Customer : user

main.models.Review "1" --> "1" main.models.Product : product
main.models.Review "1" --> "1" main.models.Customer : customer

' --- Утилиты не связаны напрямую с моделями (логически используют их)
note right of "main.models.CartItem"
  Утилита для управления корзиной.
  Не является моделью БД, но может использовать Product.
end note

note right of "main.models.OrderItem"
  Утилита для открытия заказа.
  Логически связан с Order, но не хранится в БД как отдельная сущность.
end note

@enduml